Thu Sep  6 14:27:54 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_base_s_hexdigest): remove a debug
	  print.

Thu Sep  6 14:00:49 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_base_s_digest,
	  rb_digest_base_s_hexdigest): ensure that a string is given.

Thu Sep  6 13:28:51 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/jcode.rb (_regexp_quote): fix quote handling, again.

Thu Sep  6 12:02:49 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* file.c (rb_find_file_ext): add const qualifiers to ext.

	* intern.h (rb_find_file_ext): ditto.

Wed Sep  5 17:41:11 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/jcode.rb (_regexp_quote): fix quote handling.

Mon Sep  3 20:26:08 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h (rb_find_file_ext): changed from rb_find_file_noext().

Mon Sep  3 15:12:49 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): should not adjust argc/argv if -e option
	  is supplied.

Mon Sep  3 14:38:24 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c (rb_f_require): should check static linked libraries
	  before raising exception(from 1.7).

Mon Sep  3 14:17:17 2001  Akinori MUSHA  <knu@iDaemons.org>

	* error.c: unbreak the build on *BSD with gcc 3.0.1 by removing
	  the conflicting declaration of sys_nerr for *BSD.

Sat Sep  1 09:50:54 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ruby.c (set_arg0): prevent SEGV when val is longer than the
	  original arguments.

	* ruby.c (ruby_process_options): initialize total length of
	  original arguments at first.

Sat Sep  1 03:49:11 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_popen): accept integer flags as mode.

Fri Aug 31 19:46:05 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* file.c (rb_find_file_ext): extension table can be supplied from
	  outside.  renamed.

	* eval.c (rb_f_require): replace rb_find_file_noext by
	  rb_find_file_ext.
