@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.5"
-#define RUBY_RELEASE_DATE "2001-09-05"
+#define RUBY_RELEASE_DATE "2001-09-06"
 #define RUBY_VERSION_CODE 165
-#define RUBY_RELEASE_CODE 20010905
+#define RUBY_RELEASE_CODE 20010906
